fix: abrangido erro que perda de conexão com internet na chamada http do ktor, alterado retorno de busca local de pokemons para Flow, refatorada lógica de sincronização de pokemons
feat: alterado ícone do app

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,15 +15,16 @@ activityCompose = "1.9.1"
 composeBom = "2024.08.00"
 lottieCompose = "4.0.0"
 navigationCompose = "2.8.0-rc01"
-roomCompiler = "2.6.1"
+room = "2.6.1"
 ksp = "2.0.20-1.0.24"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomCompiler" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
